수많은 LS2 API 테스트

--- a/appinfo.json
+++ b/appinfo.json
@@ -9,7 +9,6 @@
   "requiredPermissions": [
     "time.query",
     "activity.operation",
-    "all",
-    "notification.operation"
+    "all"
   ]
 }
