--- a/app/appinfo.json
+++ b/app/appinfo.json
@@ -1,11 +1,11 @@
 {
   "id": "app.sofi",
-  "version": "0.1.1",
+  "version": "1.0.0",
   "vendor": "VOID MIAN",
   "type": "web",
-  "main": "website/start_sofi.html",
+  "main": "../website/start_sofi.html",
   "title": "SOFI",
-  "icon": "website/resource/icons/menuDashboard_black.png",
+  "icon": "../website/icon.png",
   "allowVideoCapture": true,
   "allowAudioCapture": true,
   "enableWebOSVDA": true,
