zmdmths@naver.com
ee

--- a/appinfo.json
+++ b/appinfo.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "vendor": "VOID MIAN",
   "type": "web",
-  "main": "../website/start_sofi.html",
+  "main": "website/start_sofi.html",
   "title": "SOFI",
-  "icon": "../website/icon.png",
+  "icon": "website/icon.png",
   "allowVideoCapture": true,
   "allowAudioCapture": true,
   "enableWebOSVDA": true,
